# whodoirunlike

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  Dockerfile.runpod  Dockerfile.runpod-approved-speedup  Dockerfile.runpod-slim  Dockerfile.runpod.benchmark  Dockerfile.runpod.benchmark.control  Dockerfile.runpod.benchmark.final-candidate  Dockerfile.runpod.benchmark.schedule-only  README.md  pyproject.toml  requirements-runpod-processor.txt
analytics-dashboard/: .dev.vars.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
data/: approved_segments.example.yml  runners.yml
docs/: cloudflare-hosting-plan.md  identity-stable-runner-pipeline-plan.md  runpod-serverless.md  segmentation-densepose-plan.md  similarity-search-implementation-plan.md  single-clip-cv-flow.md  tooling-research.md
review_ui/: index.html  subject.html
schemas/: active_learning_queue.schema.json  approved_segment.schema.json  clip_window.schema.json  cv_artifact.schema.json  processing-event-v1.schema.json  qc_metrics.schema.json  runner.schema.json  youtube_candidate.schema.json
scripts/: build_uncertainty_queue.py  candidates_to_csv.py  compile_form_features.py  discover_youtube.py  download_review_videos.py  evaluate_candidates.py  evaluate_video_candidates.py  export_cv_tables.py  preload_rtmlib_models.py  prepare_single_clip_cv_run.py  run_clip_curation.py  run_densepose.py  run_full_cv_pipeline.py  run_fused_form.py  run_identity_track.py  run_multiview_match.py  run_openpose_compare.py  run_pose_landmarks.py  run_sam2_mask.py  (+8 more)
(+164 files in other folders)
