[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whodoirunlike"
version = "0.1.0"
description = "Offline-first ingestion and CV artifacts for Who Do I Run Like."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "camoufox>=0.4.11",
  "curl_cffi>=0.15.0",
  "imageio-ffmpeg>=0.6.0",
  "mediapipe>=0.10.35",
  "msgspec>=0.20.0",
  "opencv-python-headless>=4.13",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "scenedetect>=0.6.7",
  "scrapling>=0.2.99",
  "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
sam31 = [
  "mlx-vlm>=0.4.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
